--- a/mercadofacil.frontend/src/index.css
+++ b/mercadofacil.frontend/src/index.css
@@ -1,11 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,12 +22,19 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
   overflow-x: hidden;
+  background-color: #ffffff;
+  color: #213547;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 h1 {
@@ -42,16 +49,8 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
@@ -61,8 +60,5 @@ button:focus-visible {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
